Fix spacing in documentation

--- a/src/stylus/components/content.styl
+++ b/src/stylus/components/content.styl
@@ -9,6 +9,10 @@
 .content
     margin-bottom 4.8rem
     padding 0 2rem
+    .entry
+        margin-bottom 3.2rem
+        padding-bottom 2.4rem
+        border-bottom .1rem solid tint( primary, 50% )
 
 +media-query( screen, min-width: 960px )
     .content
